--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://maespey.com" # the base hostname & protocol for your site
 twitter_username: 19_MAE_94
 github_username:  espemi01
+instagram_username: m_espey
 
 # Build settings
 markdown: kramdown
