--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,8 @@
 - title: Theme Setup
   url: /theme-setup/
 
-- title: External Link
-  url: http://mademistakes.com
+- title: GitHub
+  url: https://github.com/espemi01/
+
+- title: Blog
+  url: /blog/
