adding linked in

--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,12 @@ owner:
   name:           Michael Espey
   avatar:         avatar.jpg
   bio:            "I am a 20 year old Luther College student."
-  email:          me@maespey.com
-  # Social networking links used in footer. Update and remove as you like.
+  email:          michael@maespey.com
   twitter:        19_MAE_94
   facebook:       loading.michael
   github:         espemi01
   stackexchange:  x
-  linkedin:       x
+  linkedin:       michael-espey
   instagram:      m_espey
   flickr:         espemi01
 
