--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ owner:
   facebook:       loading.michael
   github:         espemi01
   stackexchange:  x
-  linkedin:       michael-espey
+  linkedin:       pub/michael-espey/a6/592/223/en
   instagram:      m_espey
   flickr:         espemi01
 
