--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ permalink:   /:categories/:title/
 
 # Amount of post to show on home page
 paginate: 5
+paginate_path: "blog/page:num/"
 
 kramdown:
   auto_ids: true
