--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   url: https://github.com/espemi01/
 
 - title: ToDo List
-  url: /todo/todo.html
+  url: todo.maespey.com/
 
 - title: Blog
   url: /blog/
