--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: GitHub
   url: https://github.com/espemi01/
 
-- title: ToDo List
-  url: http://todo.maespey.com/
+- title: Calendar
+  url: /cal/
 
 - title: Blog
   url: /blog/
