--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Menu navigation links
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Projects
+  url: /projects/
 
 - title: GitHub
   url: https://github.com/espemi01/
