--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,8 @@ sass:
 permalink:   /:categories/:title/
 
 paginate: 5
-paginate_path: "blog/page:num/"
+paginate_path: "/blog/page:num/"
+paginate_alt: "/projects/page:num/"
 
 kramdown:
   auto_ids: true
