playing with paginate

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ permalink:   /:categories/:title/
 
 paginate: 5
 paginate_path: "/blog/page:num/"
-paginate_alt: "/projects/page:num/"
+paginate_path: "/projects/page:num/"
 
 kramdown:
   auto_ids: true
