--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,7 @@ sass:
 permalink:   /:categories/:title/
 
 paginate: 5
-paginate_path: "/blog/page:num/"
-paginate_path: "/projects/page:num/"
+paginate_path: "/page:num/"
 
 kramdown:
   auto_ids: true
